Fix: Match form on mobile

--- a/src/TextSplit.Api/ClientApp/src/components/match/_match.scss
+++ b/src/TextSplit.Api/ClientApp/src/components/match/_match.scss
@@ -5,6 +5,8 @@
   @include align-center;
 
   .card {
-    width: 500px;
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
